# architecture-lab

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
monolith/: Dockerfile  alembic.ini  docker-compose.yaml
monolith/app/: config.py  db.py  main.py  schemas.py  security.py
monolith/app/articles/: __init__.py  models.py  routes.py  schemas.py  services.py
monolith/app/articles/routes/: __init__.py  articles.py  tags.py
monolith/app/health/: __init__.py  routes.py
monolith/app/users/: __init__.py  dependencies.py  models.py  schemas.py
monolith/app/users/routes/: __init__.py  auth.py  profiles.py
monolith/migrations/: env.py
monolith/migrations/versions/: 2025-01-23-1f79df03f12a-articles_models.py  2025-01-23-6bb9035ae522-users_models.py  2025-01-23-eaf7d4a76175-users_models.py
requirements/: main.txt
tests/: Conduit.postman_collection.json  run-api-tests.sh
