[project]
name = "architecture-lab"
version = "0.1.0"
description = "Playground for testing and learning different backend architectures."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "fastapi[standard]>=0.115.6",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.37",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
